--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,12 +18,62 @@ code {
     monospace;
 }
 
-.no-underline {
-  text-decoration: none;
+/* Header */
+header {
+  /* padding: 1rem 14rem; */
+  border-bottom: 1px solid rgb(230, 230, 230);
+  background-color: #fff;
 }
 
-/* Header */
+.c-header {
+  border-bottom: 1px solid rgb(230, 230, 230);
+}
 
+.c-nav {
+  max-width: var(--max-width);
+  margin: 0 auto;
+}
+
+.header__profile {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+/* Home */
+.home {
+  display: flex;
+  flex-flow: wrap;
+  max-width: var(--max-width);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+.home__feed {
+  flex: 0.65;
+  margin-right: 20px;
+}
+
+.home__sidebar {
+  flex: 0.35;;
+}
+
+@media all and (min-width: 800px) {
+  /* .home {
+    padding: 20px;
+  }
+
+  .home__feed{
+    flex: 3;
+    order: 1;
+    margin: 0;
+  }
+
+  .home__sidebar {
+    display: none;
+  } */
+}
 
 /* Login */
 .c-form {
@@ -39,22 +89,313 @@ code {
   font-weight: bold !important;
 }
 
-/* BlogExcerp */
-.c-img-container {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+/* BlogPage */
+.blogPage {
+  display: flex;
+  max-width: var(--max-width);
+  margin: 20px auto;  
 }
 
-.c-profile-img {
+.blogPage__blogMetrics {
+  flex: 0.1;
+  margin-right: 20px;
+}
+
+.blogPage__blog {
+  flex: 0.6;
+  margin-right: 20px;
+}
+
+.blogPage__sidebar {
+  flex: 0.3;
+}
+
+/* BlogDetail */
+.blog {
+  padding: 30px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.05);
+}
+
+.blog__title {
+  font-weight: 800;
+  margin-bottom: 30px;
+}
+
+.blog__info {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.blog__profile img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.blog__writer {
+  font-weight: 500;
+  margin-right: 10px;
+}
+
+.blog__date {
+  color: #60747d;
+}
+
+/* BlogExcerpt */
+.blogExcerpt {
+  display: flex;
   width: 100%;
-  height: 100%;
-  border-radius: 50%;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 25px;
+  box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
+  background-color: #fff;;
 }
 
-/* Home */
-.c-home-container {
-  margin: 0 200px;
+.blogExcerpt__header {
+  display: flex;
+  height: 30px;
+  margin-bottom: 10px;
 }
+
+.blogExcerpt__profile img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.blogExcerpt__user {
+  font-size: 12px;
+  font-weight: 500;
+  color: #4d5760;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+}
+
+.blogExcerpt__date {
+  font-size: 8px;
+  color: #64707d;
+  margin-bottom: 10px;
+}
+
+.blogExcerpt__info {
+  display: flex;
+  flex-direction: column;
+}
+
+.blogExcerpt__title {
+  font-size: 20px;
+  word-wrap: break-word;
+}
+
+.blogExcerpt__content {
+  width: 100%;
+  height: 35px;
+  font-size: 12px;
+  overflow: hidden;
+}
+
+.blogExcerpt__footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.blogExcerpt__footer__left {
+  display: flex;
+}
+
+.blogExcerpt__like {
+  margin-right: 20px;
+}
+
+.blogExcerpt__number {
+  margin-left: 5px;
+}
+
+/* BlogMetrics */
+.blogMetrics {
+  position: sticky; 
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+}
+
+.blogMetrics__item  {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 25px;
+  margin-bottom: 25px;
+  padding: 10px;
+}
+
+.blogMetrics__count {
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.blogMetrics__item--filled {
+  color: #1877F2;
+}
+
+/* BlogRecommendation */
+.blogRecommendation {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border-bottom: 1px solid #eef0f1;
+}
+
+.blogRecommendation__title {
+  color: #202428;
+  font-size: 12px;
+}
+
+.blogRecommendation__writer {
+  color: #64707d;
+  font-size: 10px;
+}
+
+/* BlogRecommendationList */
+.blogRecommendationList {
+  background-color: #f9fafa;
+  box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.05);
+  border-radius: 15px;
+}
+
+/* CommentList */
+.commentList {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.05);
+  width: 100%;
+}
+
+.commentList > * {
+  width: 100%;
+}
+
+.commentList__header {
+  margin-bottom: 20px;
+}
+
+/* Comment */
+.comment {
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.comment_user-profile {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.comment__box {
+  flex: 1;
+}
+.comment__content {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 15px;
+  box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.05);
+}
+
+.comment__user-name {
+  color: #b0b3b8;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.comment__footer {
+  display: flex;
+  margin-left: 10px;
+}
+
+.comment__reply {
+  color: #b0b3b8;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 500;
+  margin-right: 10px;
+}
+
+.comment__reply:hover {
+  text-decoration: underline;
+}
+
+.comment__date {
+  color: #b0b3b8;
+  font-size: 12px;
+}
+
+/* ProfilePreview */
+.profilePreview {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #f9fafa;
+  border-radius: 15px;
+  box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.05);
+}
+
+.profilePreview__info {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 15px;
+}
+
+.profilePreview__profile {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.profilePreview__name {
+  color: #212529;
+  font-weight: 500;
+  text-decoration: none;
+}
+.profilePreview__description {
+  margin-bottom: 15px;
+}
+
+.profilePreview__follow {
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  padding: 5px;
+  color: #fff;
+  font-weight: 500;
+  background-color: #1877F2;
+}
+
+.profilePreview__follow:hover {
+  background-color: #77A7FF;
+}
+
+
+
+
+
+
+
 
 
